npm installが動かない不具合を修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - ./frontend/ws:/home/node/ws
       - /home/node/ws/node_modules
+    entrypoint: "npm start"
   backend:
     build:
       context: backend
