--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:16.15.0-alpine
-RUN mkdir -p /home/node/ws
-RUN chown node:node /home/node/ws
-WORKDIR /home/node/ws
-COPY ws/package*.json ./
-RUN chown node:node /home/node/ws/package*.json
+RUN mkdir -p /home/node/workspace
+RUN chown node:node /home/node/workspace
+WORKDIR /home/node/workspace
+COPY workspace/package*.json ./
+RUN chown node:node /home/node/workspace/package*.json
 RUN chown -R $(whoami) $(npm config get prefix)/lib/node_modules
 USER node
 RUN npm install
