--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -7,6 +7,6 @@ RUN tar -C /usr/local -xzf go1.17.linux-amd64.tar.gz
 RUN groupadd -g 1000 group
 RUN useradd -m -u 1000 -g 1000 user
 USER user
-WORKDIR /home/user/ws
+WORKDIR /home/user/workspace
 ENV PATH $PATH:/usr/local/go/bin
 #RUN echo "export PATH=$PATH:/usr/local/go/bin" >> /home/user/.bashrc
