--- a/db/config/my.conf
+++ b/db/config/my.conf
@@ -14,7 +14,10 @@ default-character-set=utf8mb4
 [mysqld]
 character-set-server=utf8mb4
 collation-server=utf8mb4_bin
-lower_case_table_names=1
+lower_case_table_names=1 
+innodb_buffer_pool_size=512M
+innodb_log_buffer_size=16M
+max_connections=20
  
 # Enable access from the host machine.
 bind-address=0.0.0.0
