ポーリング実装

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,6 +11,9 @@ server {
     location = /get {
         proxy_pass http://backend:3000/get;
     }
+    location = /getnum {
+        proxy_pass http://backend:3000/getnum;
+    }
     location / {
         proxy_pass http://frontend:3000/;
     }
