--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,7 @@ server {
     server_name image-app-rensyu.com;
     client_max_body_size 20M;
 
+
     location = /upload {
         proxy_pass http://backend:3000/upload;
     }
@@ -14,7 +15,20 @@ server {
     location = /getnum {
         proxy_pass http://backend:3000/getnum;
     }
+    location = /getname {
+        proxy_pass http://backend:3000/getname;
+    }
     location / {
         proxy_pass http://frontend:3000/;
+    }
+    location /grafana/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection '';
+
+        proxy_pass http://grafana:3000/;
     }
 }
