ロングポーリング用のAPIを実装

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -18,6 +18,9 @@ server {
     location = /getname {
         proxy_pass http://backend:3000/getname;
     }
+    location = /long-polling {
+        proxy_pass http://backend:3000/long-polling;
+    }
     location / {
         proxy_pass http://frontend:3000/;
     }
