自動デプロイ機能追加

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -34,4 +34,7 @@ server {
 
         proxy_pass http://grafana:3000/;
     }
+    location = /deploy {
+        proxy_pass http://host.docker.internal:3000/;
+    }
 }
