--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
         - ./nginx/https/https.crt:/etc/nginx/conf.d/https.crt
         - ./nginx/https/https.key:/etc/nginx/conf.d/https.key
+      extra_hosts:
+      - "host.docker.internal:host-gateway"
       networks:
         - network
     frontend:
