パスの設定を変更

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,23 +6,11 @@ server {
     client_max_body_size 20M;
 
 
-    location = /upload {
-        proxy_pass http://backend:3000/upload;
-    }
-    location = /get {
-        proxy_pass http://backend:3000/get;
-    }
-    location = /getnum {
-        proxy_pass http://backend:3000/getnum;
-    }
-    location = /getname {
-        proxy_pass http://backend:3000/getname;
-    }
-    location = /long-polling {
-        proxy_pass http://backend:3000/long-polling;
-    }
     location / {
         proxy_pass http://frontend:3000/;
+    }
+    location /backend/ {
+        proxy_pass http://backend:3000/;
     }
     location /grafana/ {
         proxy_set_header Host $host;
