--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,6 +22,9 @@ server {
 
         proxy_pass http://grafana:3000/;
     }
+    location /node_exporter/ {
+        proxy_pass http://host.docker.internal:9100/;
+    }
     location = /deploy {
         proxy_pass http://host.docker.internal:3000/;
     }
