--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,7 +2,11 @@ global:
  scrape_interval:     15s
 
 scrape_configs:
- - job_name: 'prometheus'
-   static_configs:
-     - targets:
-       - 'prometheus:9090'
+  - job_name: 'prometheus'
+    static_configs:
+      - targets:
+        - 'prometheus:9090'
+  - job_name: 'node'
+    static_configs:
+      - targets:
+        - 'host.docker.internal:9100'
